<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".pages.AboutFragment">
<LinearLayout
    android:layout_width="match_parent"
  android:orientation="vertical"
    android:layout_height="match_parent">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        app:cardElevation="8dp"
        app:cardBackgroundColor="@color/colorPrimaryDark"
        android:layout_height="65dp"
        android:layout_marginBottom="16dp"
        >
        <Button
            android:id="@+id/back"
            android:layout_width="70dp"
            android:layout_height="30dp"
            android:text="back"
            android:textStyle="bold"
            android:layout_marginStart="10dp"
            android:layout_marginTop="17dp"
            android:textColor="@color/colorPrimaryDark"
            android:background="@color/colorWhite"

            android:layout_marginLeft="10dp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_nbm"
            android:textColor="@color/colorWhite"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_marginStart="15dp"
            android:layout_gravity="center"
            android:layout_marginLeft="15dp" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_text"
        android:textSize="16sp"
        android:textColor="@android:color/black"
        android:layout_margin="10dp"

        />
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        app:cardElevation="8dp"
        app:cardBackgroundColor="@color/colorPrimaryDark"
        android:layout_height="65dp"
        android:layout_marginBottom="16dp"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_nbm_bn"
            android:textColor="@color/colorWhite"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_gravity="center"
            />
    </androidx.cardview.widget.CardView>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_text_bn"
        android:textSize="16sp"
        android:textColor="@android:color/black"
        android:layout_margin="10dp"

        />
</LinearLayout>
</ScrollView>